chore: add tests, product similarity